--- a/styles/sass/layouts/_topBar.scss
+++ b/styles/sass/layouts/_topBar.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   position: fixed;
   z-index: 10;
   top: 0;
